tests/ui/mut/mut-suggestion.stderr
error[E0596]: cannot borrow `arg` as mutable, as it is not declared as mutable
  --> $DIR/mut-suggestion.rs:12:5
   |
LL |     arg.mutate();
   |     ^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL | fn func(mut arg: S) {
   |         +++

error[E0596]: cannot borrow `local` as mutable, as it is not declared as mutable
  --> $DIR/mut-suggestion.rs:20:5
   |
LL |     local.mutate();
   |     ^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     let mut local = S;
   |         +++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
